syntax = "proto3";

package cyclingtracker;

// Service for providing session tokens
service SessionAuth {
  // Return a session token on successful login.
  rpc Login(Credentials) returns (SessionToken) {}

  // Sign up a new user
  rpc SignUp(Credentials) returns (SignUpResult) {}
}

message Credentials {
  // Username
  string username = 1;
  // Password
  string password = 2;
}

message SignUpResult {
  bool result = 1;
}

message SessionToken {
  // Session token as a string.
  string token = 1;
}

// Service for tracking cycling activities
service CyclingTracker {
  // Save a workout and return an workout summary.
  //
  // Summary includes measurement averages.
  rpc SaveWorkout(Workout) returns (WorkoutSummary) {}

  // Return detailed measurements of a certain workout. Measurements are streamed
  // rather than returned at once, since there might be a lot of measurements.
  rpc GetMeasurements(WorkoutRequest) returns (stream Measurement) {}

  // Records an ongoing workout and its measurements and returns a workout summary
  // at the end of the workout.
  rpc RecordWorkout(stream Measurement) returns (WorkoutSummary) {}

  // Runs a workout and returns updated averages
  rpc GetCurrentAverages(stream Measurement) returns (stream WorkoutSummary) {}
}

message Workout {
  float km_ridden = 1;
  repeated Measurement measurements = 2;
}

message Measurement {
  reserved 4;
  float speed = 1;
  int32 watts = 2;
  int32 rpm = 3;
  int32 heartrate = 5;
}

message WorkoutSummary {
  optional int32 id = 1;
  float km_ridden = 2;
  float avg_speed = 3;
  int32 avg_watts = 4;
  int32 avg_rpm = 5;
  int32 avg_heartrate = 6;
  repeated Measurement measurements = 7;
}

message WorkoutRequest {
  int32 id = 1;
}